--- a/requirements.txt
+++ b/requirements.txt
@@ -3,11 +3,12 @@ apturl==0.5.2
 asn1crypto==0.24.0
 astroid==2.3.3
 Brlapi==0.6.6
-certifi==2018.1.18
+certifi==2020.4.5.1
+cffi==1.14.0
 chardet==3.0.4
 click==7.1.1
 command-not-found==0.3
-cryptography==2.1.4
+cryptography==2.9.2
 cupshelpers==1.0
 dash==1.11.0
 dash-bootstrap-components==0.9.2
@@ -24,7 +25,7 @@ Flask==1.1.2
 Flask-Compress==1.4.0
 future==0.18.2
 httplib2==0.18.1
-idna==2.6
+idna==2.9
 img2pdf==0.2.3
 importlib-metadata==1.6.0
 importlib-resources==1.4.0
@@ -52,10 +53,11 @@ pandas==1.0.3
 pdfminer.six==20200402
 pdftotext==2.1.4
 pexpect==4.2.1
-Pillow==5.1.0
+Pillow==7.1.2
 plotly==4.6.0
 protobuf==3.0.0
 pycairo==1.16.2
+pycparser==2.20
 pycrypto==2.6.1
 pycryptodome==3.9.7
 pycups==1.9.73
@@ -69,16 +71,16 @@ python-apt==1.6.5+ubuntu0.2
 python-dateutil==2.8.1
 python-debian==0.1.32
 pytz==2019.3
-pyxdg==0.25
-PyYAML==3.12
+pyxdg==0.26
+PyYAML==5.3.1
 reportlab==3.4.0
-requests==2.18.4
+requests==2.23.0
 requests-unixsocket==0.1.5
 retrying==1.3.3
 ruffus==2.6.3
 SecretStorage==2.3.1
 simplejson==3.13.2
-six==1.14.0
+six==1.15.0
 sortedcontainers==2.1.0
 system-service==0.3
 systemd-python==234
@@ -86,7 +88,7 @@ typed-ast==1.4.1
 ubuntu-drivers-common==0.0.0
 ufw==0.36
 unattended-upgrades==0.1
-urllib3==1.22
+urllib3==1.25.9
 usb-creator==0.3.3
 virtualenv==20.0.18
 wadllib==1.3.2
